# Vibe-Training

./: AUTOPILOT.md  AUTOPILOT_USER_NOTES.md  CLAUDE.md  PostTrainingAgent.md  README.md  autopilot.yaml  example.html  pyproject.toml
autopilot/: config.py  models.py
autopilot/agent/: __init__.py  loop.py
autopilot/cli/: conversations.py  eval_programs.py  human.py  install_env.py  prepare.py  processes.py  run.py  runtime.py  search.py
autopilot/context/: __init__.py
autopilot/data/: decider.py  decontam.py  probe.py  reviewer.py  schema.py  scorer.py
autopilot/eval/: programs.py  runner.py  suite.py
autopilot/goal/: loop.py  round_trace.py
autopilot/hf/: __init__.py  inspect.py
autopilot/kernel/: __init__.py  artifact_policy.py  executor.py  permissions.py  (+1 more)
cli/: agent.py  ask_human.py  autonomous.py  collect.py  context.py  doctor.py  goal.py  rounds.py
context/: manager.py
data/: __init__.py  adapter_agent.py  classifier.py
eval/: __init__.py  benchmarks.py  diagnose.py  program_agent.py  tool_registry.py
goal/: __init__.py  spec.py
hf/: browse.py  search.py
kernel/: action_schema.py  agent_kernel.py  contracts.py  stop_policy.py
llamafactory/: __init__.py  config.py  converter.py  validate_cli.py
llm/: conversation_recorder.py  openai_compatible.py
memory/: KNOWN_BUGS.md  POLICIES.md
rl/: __init__.py  verifier.py
runtime/: __init__.py  agent_turn.py  clients.py  memory.py  processes.py  skills.py  state.py
tools/: discovery.py  environments.py  long_task_monitor.py  post_training_memory.py  registry.py  resource_allocation.py  resource_planner.py  resources.py  vllm_manager.py  vllm_service.py  web_browser.py  web_search.py
(+30 files in other folders)
